Strings, colors e menu.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,21 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="pd_color_1">#03233f</color>
+    <color name="pd_color_2">#3d499e</color>
+    <color name="pd_color_3">#385c73</color>
+    <color name="pd_color_4">#6dcbf0</color>
+    <color name="pd_color_5">#f1e64a</color>
+    <color name="pd_color_6">#f1b71b</color>
+    <color name="pd_color_7">#8c191b</color>
+    <color name="pd_color_8">#404040</color>
+    <color name="pd_color_9">#1f2325</color>
+    <color name="pd_color_0">#1f2</color>
+
+    <color name="pdms_color_0">#580000</color>
+    <color name="pdms_color_1">#ff5f00</color>
+    <color name="pdms_color_2">#ffde8d</color>
+    <color name="pdms_color_3">#006e73</color>
+    <color name="pdms_color_4">#c7e5da</color>
 </resources>
