--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_margin="16dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="240dp"
@@ -13,10 +12,10 @@
         android:id="@+id/cardView_movie"
         app:cardCornerRadius="25dp"
         app:cardElevation="10dp"
-        app:layout_constraintTop_toTop="parent"
-        app:layout_constraintBottom_toBottom="parent"
-        app:layout_constraintStart_toStart="parent"
-        app:layout_constraintEnd_toEnd="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:layout_width="match_parent"
@@ -91,12 +90,12 @@
                         android:gravity="start"
                         android:id="@+id/textView_movie_date"/>
 
-
                 </LinearLayout>
 
             </LinearLayout>
 
         </LinearLayout>
+
 
     </androidx.cardview.widget.CardView>
 
